services/Guacamole/20-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: guacamole
  labels:
    name: guacamole
