services/Guacamole/40-database.yml
kind: Service
apiVersion: v1
metadata:
  namespace: guacamole
  name: guacamole-db
  labels:
    app: guacamole-db
spec:
  selector:
    app: guacamole-db
  ports:
    - port: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: guacamole
  name: guacamole-db
  labels:
    app: guacamole-db
spec:
  selector:
    matchLabels:
      app: guacamole-db
  template:
    metadata:
      labels:
        app: guacamole-db
    spec:
      containers:
        - name: postgres
          image: postgres:12-alpine
          volumeMounts:
            - name: db-init
              mountPath: /docker-entrypoint-initdb.d
            - name: data
              mountPath: /var/lib/postgresql/data
          ports:
            - name: db
              containerPort: 5432

      volumes:
        - name: db-init
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: guacamole-db-data
