services/Guacamole/60-frontend.yml
kind: Service
apiVersion: v1
metadata:
  namespace: guacamole
  name: guacamole
  labels:
    app: guacamole
spec:
  selector:
    app: guacamole
  ports:
    - port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: guacamole
  name: guacamole
  labels:
    app: guacamole
spec:
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      containers:
        - name: guacamole
          image: guacamole/guacamole:latest
          ports:
            - name: guacamole
              containerPort: 8080
