services/Guacamole/40-postgresql.kae.yml
kind: Service
apiVersion: v1
metadata:
  namespace: guacamole
  name: postgresql
spec:
  selector:
    app: guacamole
    component: postgresql
  ports:
    - port: 5432

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: guacamole
  name: filter-ingress-on-postgresql
spec:
  podSelector:
    matchLabels:
      app: guacamole
      component: postgresql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: guacamole
          component: guacamole
    - podSelector:
        matchLabels:
          app: guacamole
          component: backup-postgresql
    ports:
    - protocol: TCP
      port: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: guacamole
  name: postgresql
spec:
  selector:
    matchLabels:
      app: guacamole
      component: postgresql
  template:
    metadata:
      labels:
        app: guacamole
        component: postgresql
    spec:
      containers:
        - name: postgres
          image: postgres:12-alpine
          imagePullPolicy: Always
          volumeMounts:
            - name: db-init
              mountPath: /docker-entrypoint-initdb.d
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: data
          ports:
            - name: db
              containerPort: 5432

      volumes:
        - name: db-init
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: postgresql-data
