services/Guacamole/50-backend.kae.yml
kind: Service
apiVersion: v1
metadata:
  namespace: guacamole
  name: guacd
spec:
  selector:
    app: guacamole
    component: guacd
  ports:
    - port: 4822

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: guacamole
  name: filter-ingress-on-guacd
spec:
  podSelector:
    matchLabels:
      app: guacamole
      component: guacd
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: guacamole
            component: guacamole
      ports:
        - protocol: TCP
          port: 4822

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: guacamole
  name: guacd
spec:
  selector:
    matchLabels:
      app: guacamole
      component: guacd
  template:
    metadata:
      labels:
        app: guacamole
        component: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd
          imagePullPolicy: Always
          ports:
            - name: guacd
              containerPort: 4822
