services/Guacamole/50-backend.yml
kind: Service
apiVersion: v1
metadata:
  namespace: guacamole
  name: guacd
  labels:
    app: guacd
spec:
  selector:
    app: guacd
  ports:
    - port: 4822

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: guacamole
  name: allow-guacamole-to-guacd
spec:
  podSelector:
    matchLabels:
      app: guacd
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: guacamole
    ports:
    - protocol: TCP
      port: 4822

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: guacamole
  name: guacd
  labels:
    app: guacd
spec:
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd:latest
          ports:
            - name: guacd
              containerPort: 4822
