services/Guacamole/60-frontend.kae.yml
kind: Service
apiVersion: v1
metadata:
  namespace: guacamole
  name: guacamole
spec:
  selector:
    app: guacamole
    component: guacamole
  ports:
    - port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: guacamole
  name: filter-ingress-on-traefik
spec:
  podSelector:
    matchLabels:
      app: guacamole
      component: guacamole
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: traefik
        podSelector:
          matchLabels:
            app: traefik

      ports:
        - protocol: TCP
          port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: guacamole
  name: guacamole
spec:
  selector:
    matchLabels:
      app: guacamole
      component: guacamole
  template:
    metadata:
      labels:
        app: guacamole
        component: guacamole
    spec:
      containers:
        - name: guacamole
          image: guacamole/guacamole
          imagePullPolicy: Always
          ports:
            - name: guacamole
              containerPort: 8080

      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
               app: guacamole
               component: postgresql
            topologyKey: "kubernetes.io/hostname"
