services/Guacamole/80-ssh-tunnel.yml
kind: Service
apiVersion: v1
metadata:
  namespace: guacamole
  name: guacd-flash
spec:
  selector:
    app: guacamole
    component: guacd-flash
  ports:
    - port: 4822

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: guacamole
  name: filter-ingress-on-guacd-flash
spec:
  podSelector:
    matchLabels:
      app: guacamole
      component: guacd-flash
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: guacamole
          component: guacamole
    ports:
    - protocol: TCP
      port: 4822

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: guacamole
  name: guacd-flash
spec:
  selector:
    matchLabels:
      app: guacamole
      component: guacd-flash
  template:
    metadata:
      labels:
        app: guacamole
        component: guacd-flash
    spec:
      containers:
        - name: ssh-tunnel
          image: jujhars13/docker-ssh-tunnel
          ports:
            - name: guacd
              containerPort: 4822
          volumeMounts:
            - name: ssh-key
              mountPath: /ssh_key

      volumes:
        - name: ssh-key
          secret:
            secretName: guacd-flash-ssh-key
            defaultMode: 0600
